--- a/VSfirstdotnet/VSfirstdotnet.csproj
+++ b/VSfirstdotnet/VSfirstdotnet.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Google.Apis.Urlshortener.v1" Version="1.32.2.138" />
     <PackageReference Include="Hashids.net" Version="1.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
