--- a/VSfirstdotnet/appsettings.json
+++ b/VSfirstdotnet/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "LinkConnection": "Data Source = LinkDB.db"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
